squatch-lan-k3s/infrastructure/op-connect/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: op-connect
  namespace: op-connect
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`op-connect.kube.local.squatch.dev`)
      priority: 10
      services:
        - name: op-connect
          port: 8080
  tls:
    certResolver: default
